--- a/lab2/style.css
+++ b/lab2/style.css
@@ -33,10 +33,9 @@ tr:nth-child(2):hover {
     color: #f5f507;
 
 }
-
-.clock{
-    width: 100px;
-    height: 100px;
-    border: 1px solid black;
-    border-radius: 20px;
+.clocks{
+    display: flex;
+    gap:10%;
 }
+
+
