--- a/lab2/styles/clock_position.css
+++ b/lab2/styles/clock_position.css
@@ -21,9 +21,9 @@
 .vertical {
     position: relative;
     width: 2px;
-    height: 55%;
+    height: 50px;
     left: calc(50% - 1px) ;
-    top: 4px;
+    top: 7px;
 }
 
 .horizontal {
