--- a/lab5/css/style.css
+++ b/lab5/css/style.css
@@ -9,7 +9,7 @@ body {
     background-color: #f0f0f0;
 }
 
-.table{~
+.table{
     display: flex;
     flex-direction: column;
     align-items: center;
